--- a/index.html
+++ b/index.html
@@ -9,12 +9,27 @@
 </head>
 <body>
   <section class="page1">
+    <div id="topOfP1"></div>
     <div id="pageOne">
       <img src="./assets/img/page1.svg">
       <h3 id="p1Text1">What is a<br>painting worth?</h3>
       <h4 id="p1Text2">Enter</h4>
-      <a href="#"><img id="p1Button" src="./assets/img/button1.png"></a>
+      <a href="#topOfP2"><img id="p1Button" src="./assets/img/button1.png"></a>
     </div>
-</section>
+  </section>
+  
+  <section class="page2">
+    <div id="topOfP2"></div>
+    <div id="pageTwo">
+      <img src="./assets/img/page1.svg">
+      <h3 id="p2Text1">"Salvator Mundi"</h3>
+      <h3 id="p2Text2">Believed to be painted by<br>
+	  Leonardo Da Vinci<br>around 1500</h4>
+      <a href="#topOfP1"><img id="p2Button" src="./assets/img/button1.png"></a>
+	  <a href="#topOfP1"><img id="p2Button2" src="./assets/img/button1.png"></a>
+	  <h4 id="p2Text3">History</h4>
+	  <h4 id="p2Text4">Value</h4>
+    </div>
+  </section>
 </body>
 </html>
