start of history section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 <title>DaVinci record</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	
+	
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
   </head>
 </head>
@@ -25,11 +28,49 @@
       <h3 id="p2Text1">"Salvator Mundi"</h3>
       <h3 id="p2Text2">Believed to be painted by<br>
 	  Leonardo Da Vinci<br>around 1500</h4>
-      <a href="#topOfP1"><img id="p2Button" src="./assets/img/button1.png"></a>
+      <a href="#topOfP3"><img id="p2Button" src="./assets/img/button1.png"></a>
 	  <a href="#topOfP1"><img id="p2Button2" src="./assets/img/button1.png"></a>
 	  <h4 id="p2Text3">History</h4>
 	  <h4 id="p2Text4">Value</h4>
     </div>
   </section>
+  
+  <section class="page3">
+    <div id="topOfP3"></div>
+    <div id="pageThree">
+	  <img src="./assets/img/timelinePage.svg">
+      <a href="#topOfP4"><img id="arrowForward" src="./assets/img/arrowForward.png"></a>
+	  
+      <a href="#topOfP2"><img id="buttonBack" src="./assets/img/buttonBack.png"></a>
+	  <h3 id="p3Text1">Previously<br>thought lost,<br>presumed<br>destroyed</h3>
+	</div>	
+  </section>
+  
+  <section class="page4">
+    <div id="topOfP4"></div>
+    <div id="pageFour">
+	  <img src="./assets/img/timelinePage.svg">
+      <a href="#topOfP5"><img id="arrowForward4" src="./assets/img/arrowForward.png"></a>
+	  <a href="#topOfP3"><img id="arrowBack4" src="./assets/img/arrowBack.png"></a>
+      <a href="#topOfP1"><img id="buttonBack4" src="./assets/img/buttonBack.png"></a>
+	  <h3 id="p4Text1">Sold as a<br>copy fetching<br>45 pounds ($60)</h3>
+	  <h3 id="p4Text2"><b>1958</b></h3>
+	</div>	
+  </section>
+  
+  <section class="page5">
+    <div id="topOfP5"></div>
+    <div id="pageFive">
+	  <img src="./assets/img/timelinePage.svg">
+      <a href="#topOfP6"><img id="arrowForward5" src="./assets/img/arrowForward.png"></a>
+	  <a href="#topOfP4"><img id="arrowBack5" src="./assets/img/arrowBack.png"></a>
+      <a href="#topOfP1"><img id="buttonBack5" src="./assets/img/buttonBack.png"></a>
+	  <h3 id="p5Text1">Re-emerged<br>at a regional auction<br>
+in the US</h3>
+	  <h3 id="p5Text2"><b>2005</b></h3>
+	</div>	
+  </section>
+  
+  
 </body>
 </html>
