adds history section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h3 id="p2Text2">Believed to be painted by<br>
 	  Leonardo Da Vinci<br>around 1500</h4>
       <a href="#topOfP3"><img id="p2Button" src="./assets/img/button1.png"></a>
-	  <a href="#topOfP1"><img id="p2Button2" src="./assets/img/button1.png"></a>
+	  <a href="#topOfP8"><img id="p2Button2" src="./assets/img/button1.png"></a>
 	  <h4 id="p2Text3">History</h4>
 	  <h4 id="p2Text4">Value</h4>
     </div>
@@ -40,8 +40,7 @@
     <div id="pageThree">
 	  <img src="./assets/img/timelinePage.svg">
       <a href="#topOfP4"><img id="arrowForward" src="./assets/img/arrowForward.png"></a>
-	  
-      <a href="#topOfP2"><img id="buttonBack" src="./assets/img/buttonBack.png"></a>
+	  <a href="#topOfP2"><img id="buttonBack" src="./assets/img/buttonBack.png"></a>
 	  <h3 id="p3Text1">Previously<br>thought lost,<br>presumed<br>destroyed</h3>
 	</div>	
   </section>
@@ -52,7 +51,7 @@
 	  <img src="./assets/img/timelinePage.svg">
       <a href="#topOfP5"><img id="arrowForward4" src="./assets/img/arrowForward.png"></a>
 	  <a href="#topOfP3"><img id="arrowBack4" src="./assets/img/arrowBack.png"></a>
-      <a href="#topOfP1"><img id="buttonBack4" src="./assets/img/buttonBack.png"></a>
+      <a href="#topOfP2"><img id="buttonBack4" src="./assets/img/buttonBack.png"></a>
 	  <h3 id="p4Text1">Sold as a<br>copy fetching<br>45 pounds ($60)</h3>
 	  <h3 id="p4Text2"><b>1958</b></h3>
 	</div>	
@@ -64,12 +63,48 @@
 	  <img src="./assets/img/timelinePage.svg">
       <a href="#topOfP6"><img id="arrowForward5" src="./assets/img/arrowForward.png"></a>
 	  <a href="#topOfP4"><img id="arrowBack5" src="./assets/img/arrowBack.png"></a>
-      <a href="#topOfP1"><img id="buttonBack5" src="./assets/img/buttonBack.png"></a>
+      <a href="#topOfP2"><img id="buttonBack5" src="./assets/img/buttonBack.png"></a>
 	  <h3 id="p5Text1">Re-emerged<br>at a regional auction<br>
 in the US</h3>
 	  <h3 id="p5Text2"><b>2005</b></h3>
 	</div>	
   </section>
+  
+  <section class="page6">
+    <div id="topOfP6"></div>
+    <div id="pageSix">
+	  <img src="./assets/img/timelinePage.svg">
+      <a href="#topOfP7"><img id="arrowForward6" src="./assets/img/arrowForward.png"></a>
+	  <a href="#topOfP5"><img id="arrowBack6" src="./assets/img/arrowBack.png"></a>
+      <a href="#topOfP2"><img id="buttonBack6" src="./assets/img/buttonBack.png"></a>
+	  <h3 id="p6Text1">Sold at Sotheby’s for<br>$80 million<br>
+then sold on again<br>for $127.5 million<br>within days</h3>
+	  <h3 id="p6Text2"><b>2013</b></h3>
+	</div>	
+  </section>
+  
+  <section class="page7">
+    <div id="topOfP7"></div>
+    <div id="pageSeven">
+	  <img src="./assets/img/timelinePage.svg">
+      <a href="#topOfP6"><img id="arrowBack7" src="./assets/img/arrowBack.png"></a>
+      <a href="#topOfP2"><img id="buttonBack7" src="./assets/img/buttonBack.png"></a>
+	  <h3 id="p7Text1">Sold for<br>$450.3 million<br>at auction in<br>New York</h3>
+	  <h3 id="p6Text2"><b>Nov 15, 2017</b></h3>
+	</div>	
+  </section>
+  
+<section class="page8">
+    <div id="topOfP8"></div>
+    <div id="pageEight">
+	  <img src="./assets/img/emptyPage.svg">
+      <a href="#topOfP9"><img id="enterButton8" src="./assets/img/enterButton.png"></a>
+      <a href="#topOfP2"><img id="buttonBack8" src="./assets/img/buttonBack.png"></a>
+	  <h3 id="p8Text1"><b>$450.3 million</b></h3>
+	  <h3 id="p8Text2"><b>What else can<br>you buy for that?</b></h3>
+	</div>	
+  </section>
+  
   
   
 </body>
