--- a/index.html
+++ b/index.html
@@ -101,10 +101,24 @@ then sold on again<br>for $127.5 million<br>within days</h3>
       <a href="#topOfP9"><img id="enterButton8" src="./assets/img/enterButton.png"></a>
       <a href="#topOfP2"><img id="buttonBack8" src="./assets/img/buttonBack.png"></a>
 	  <h3 id="p8Text1"><b>$450.3 million</b></h3>
-	  <h3 id="p8Text2"><b>What else can<br>you buy for that?</b></h3>
+	  <center><h3 id="p8Text2"><b>What else can<br>you buy for that?</b></h3></center>
 	</div>	
   </section>
   
+<section class="page9">
+    <div id="topOfP9"></div>
+    <div id="pageNine">
+	  <img src="./assets/img/emptyPage.svg">
+	  <img id="Neymar" src="./assets/img/Neymar.png">
+      <a href="#topOfP2"><img id="buttonBack9" src="./assets/img/buttonBack.png"></a>
+	  <a href="page10"><img id="arrowForward9" src="./assets/img/arrowForward.png"></a>
+	  <h3 id="p9Text1">Paris Saint-German<br>bought Neymar<br>
+this year for<br>222 million euros<br><i>
+($261 million)</i></h3>
+	  <center><h3 id="p9Text2">Change from<br>
+ $450 million<br><i>= $189 million</i></h3></center>
+	</div>	
+  </section>
   
   
 </body>
